tests/fixtures/valid/run_time.lby
fn main -> i64
    let first i64 = mono_now()
    let second i64 = mono_now()
    let score i64 = 0
    if second >= first
        score += 1
    if wall_now() > 0
        score += 1
    sleep_millis(0)
    sleep_millis(-5)
    score
