tests/fixtures/invalid/in_unsupported_collection.lby
fn main -> i64
    1 if 5 in 3 else 0
